--- a/computed.html
+++ b/computed.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<script src="js/2.0vue.js" type="text/javascript" charset="utf-8"></script>
+		<link rel="stylesheet" type="text/css" href="lass/computed.css"/>
 	</head>
 	<body>
 		<div id="app">
